# Pineapple-Core

./: Cargo.toml  README.md  task
src/: main.rs
src/file_interface/: mod.rs
src/file_service/: browser.rs  launcher.rs  mod.rs
src/message_handler/: interpreter.rs  mod.rs  router.rs
src/tcp_interface/: client.rs  mod.rs  server.rs
